mbie 0.8.6
*  Modified by Antonia Milkop 13/8/14
*  Updated OneChina example to take out Country13 references as these are no longer applicable 

mbie 0.8.5
*  Modified by Antonia Milkop
*  Took out Country13 from CountryManip function
*  Added IVSweights_old to example(CountryGroup)
*  Updated the example in locations_2013.Rd with one that relates to the new IVS locations
* modified CountryGroup further so it can handle some more annoying And/and Of/of and uppercase countries issues (PE)

mbie 0.8.4 (peer reviewed by Jacob S)
*	Developed by Antonia Milkop
* 	CountryManip function has been changed.  Corrections made to the following Country classifications in IVSweights:
*	Brunei Darussalam (used to be defined as Rest of Americas, now defined as Rest of Asia);
*	Afghanistan (used to be defined as Africa and Middle East, now defined as Rest of Asia);
*	Maldives (used to be defined as Africa and Middle East, now defined as Rest of Asia);
*	Armenia (used to be defined as Rest of Europe, now defined as Rest of Asia);
*	St Helena (used to be defined as Rest of Americas, now defined as Africa and Middle East);
*	Falkland Islands (used to be defined as UK, now defined as Rest of Americas)
*  We have also kept a full list of country mappings called 'IVSweights_old' in the CountryManip function.  
*  This will allow us to easily replicate country analysis on old IVS data if need be.

mbie 0.8.3 
*	Developed by Antonia Milkop
* 	IVS2 now has up-to-date locations file called locations_2013  
*	all old locations (pre July 2013 IVS) are now stored in locations_old
*  Updated again on 18/6/14 with new locations_2013 data that Jacob updated


mbie 0.8.2 (Approved PE 14/5/14)
* Removed extrafont dependencies


mbie 0.8.1 (Approved PE 9/5/14)
* CountryGroup function corrected: "Cayman Islands" and "Trinidad and Tobago" taken out of "Africa and Middle East" and put into "Rest of Americas"



mbie 0.8.0
* removed all the big data sets and put in a separate package